# infi-discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
bot/: bot.py  config.py  main.py
bot/cogs/: admin.py  gemini.py  general.py  moderation.py  watch2gether.py
bot/database/: connection.py  migrations.py  models.py
bot/services/: api_client.py  gemini.py  watch2gether.py
bot/utils/: error_handler.py  logging.py
data/: system_prompt.txt
